feat: rebrand to DocuWizard with medieval wizard theme
- Update package.json with DocuWizard branding and description
- Replace generic fonts with medieval Cinzel and Crimson Text
- Add comprehensive medieval wizard CSS theme with purple/gold colors
- Create WizardLogo component with animated wizard hat and staff
- Add medieval icon set (magic staff, spell book, crystal ball, etc.)
- Implement WizardButton component with magical effects
- Create SpellCard components with parchment textures
- Transform hero section with DocuWizard branding and wizard theme
- Update README.md with complete DocuWizard documentation
- Add magical animations, gradients, and medieval styling throughout

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "mckays-app-template",
-  "version": "2.0.0",
+  "name": "docuwizard",
+  "version": "1.0.0",
+  "description": "AI-powered PDF document analysis with local Ollama models - Transform documents with ancient wisdom & modern AI",
+  "keywords": ["pdf", "ai", "document-analysis", "ollama", "wizard", "medieval", "local-ai"],
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
